--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.2",
+    "jwt-decode": "^3.1.2",
     "postcss-normalize": "^10.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -18,7 +20,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "sass": "^1.51.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.0.0-rc.4"
   },
   "scripts": {
     "start": "react-scripts start",
