--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "sass": "^1.51.0",
+    "tailwindcss": "^3.1.6",
     "web-vitals": "^2.1.4",
     "zustand": "^4.0.0-rc.4"
   },
