--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-sanity-pagination": "^2.0.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.51.0",
     "tailwindcss": "^3.1.6",
     "web-vitals": "^2.1.4",
